--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,30 @@
     <meta charset="utf-8">
     <title>Todo List</title>
     <link rel="stylesheet" type="text/css" href="styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 
 <body>
-    <section id="main">
-        This is our class exercise!
-    </section>
+    	<div id="myAwesomeToDoList">
+		<h1>To Do List</h1>
+				
+		<div id="taskAdder">
+			<form>
+				<input type="text" id="newTask" >
+				<input type="submit" id="addButton" value="ADD">
+			</form>
+		</div>
+    </div>
+		
+		<div id="taskList">
+
+		</div>
+	
+	</div>
+	
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="script/script.js"></script>
+	
 </body>
 
 </html>
