--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <div id="taskAdd">
             <form>
                 <input type="text" id="newTask" placeholder="What do you have to do?">
-                <input type="submit" onclick="saveTask()" id="addButton" value="ADD">
+                <input type="submit" id="addButton" value="ADD">
             </form>
         </div>
     </div>
